@@ -36,11 +36,6 @@ import com.sun.grid.arco.model.QueryType;
 public class MysqlSQLGenerator extends AbstractSQLGenerator {
    
    
-   protected void generateRowLimit(com.sun.grid.arco.model.QueryType query, StringBuffer where) {      
-      where.append(" LIMIT ");
-      where.append(query.getLimit());
-   }
-   
   public javax.sql.ConnectionPoolDataSource createDatasource(com.sun.grid.arco.model.DatabaseType database)
   throws java.sql.SQLException {
       
